--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -176,7 +176,7 @@
                                                         <li><a href="{% url 'mailsender:update' %}">{% trans 'Mail Sender' %}</a></li>
                                                         <li><a href="{% url 'security:update' %}">{% trans 'Security' %}</a></li>
                                                         <li><a href="{% url 'themes:manage' %}">{% trans 'Theme' %}</a></li>
-																												<li><a href="{% url 'webconferences:settings' %}">{% trans 'Conference Settings' %}</a></li>
+																												<li><a href="{% url 'webconferences:settings' %}">{% trans 'Web Conference Settings' %}</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
