--- a/webconference/templates/webconference/jitsi.html
+++ b/webconference/templates/webconference/jitsi.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-{% load static i18n %}
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% trans "Web Conference" %}</title>
-    <script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
-    <!-- <script src="https://meet.jit.si/external_api.js"></script> -->
+{% extends "webconference/view.html" %}
+
+{% load static i18n pagination permissions_tags subject_counter access_conference %}
+{% load django_bootstrap_breadcrumbs %}
+
+{% block javascript%}
+    {{ block.super }}
     <script src="{% static 'js/jitsi.js' %}"></script>
     <style>
-      body, html, #jitsi, iframe{
+      #jitsi, iframe{
           margin-left: -1px;
           margin-right: 0px;
           margin-top: -2px;
@@ -19,57 +18,60 @@
           height: 100%;
       }
       </style>
-  </head>
-  <body>
-    <div id="jitsi">
+{% endblock%}
 
-    </div>
+{% block breadcrumbs %}
+    {{ block.super }}
+{% endblock %}
 
-    <script>
-    // code to start jitsi api
-      var domain = "{{domain}}"; // domain that jitsi will itself connect
-      var room = "{{name_room}}"; // name of the room to be created
-      var width = $("body").width(); // width of the window to be created
-      var height = $("body").height(); // height of the window to be created
-      var html = document.getElementById("jitsi");
-      var api = new JitsiMeetExternalAPI(domain, room, width, height,html);
-      // window.onload = initpage;
-      window.onload = initpage;
-      function initpage(){
-        api.executeCommand('displayName', '{{user}}');
-        api.executeCommand('email', '{{user.email}}');
-        api.executeCommand('avatarUrl', '{{user_image}}');
-        api.addEventListener('videoConferenceLeft', function(res){
-          $.ajax({
-            method: "GET",
-      			url: "{% url 'webconferences:exit'%}",
-      			dataType: 'json',
-      			data: res,
-      			success: function(response) {
-              window.location.replace(response['url']);
-      				console.log(response);
-      			},
-      			error: function(response) {
-      				console.log(response);
-      			}
-      		});
-        });
-        var repeater = setInterval(function () {
-          $.ajax({
-            method: "GET",
-            url: "{% url 'webconferences:online'%}",
-            dataType: 'json',
-            data: {'slug':'{{name_room}}'},
-            success: function(response) {
-              console.log(response);
-            },
-            error: function(response) {
-              console.log(response);
-            }
-          });
-        }, 60*1000);
-      }
-    </script>
+{% block content %}
+<div id="jitsi">
 
-  </body>
-</html>
+</div>
+<script>
+// code to start jitsi api
+  var domain = "{{domain}}"; // domain that jitsi will itself connect
+  var room = "{{name_room}}"; // name of the room to be created
+  var height = $(document).height(); // height of the window to be created
+  var html = document.getElementById("jitsi");
+  $('#jitsi').css({'height':height});
+  var api = new JitsiMeetExternalAPI(domain, room, 0, 0,html);
+  // window.onload = initpage;
+  window.onload = initpage;
+  function initpage(){
+    api.executeCommand('displayName', '{{user}}');
+    api.executeCommand('email', '{{user.email}}');
+    api.executeCommand('avatarUrl', '{{user_image}}');
+    api.addEventListener('videoConferenceLeft', function(res){
+      $.ajax({
+        method: "GET",
+        url: "{% url 'webconferences:exit'%}",
+        dataType: 'json',
+        data: res,
+        success: function(response) {
+          window.location.replace(response['url']);
+          console.log(response);
+        },
+        error: function(response) {
+          console.log(response);
+        }
+      });
+    });
+    var repeater = setInterval(function () {
+      $.ajax({
+        method: "GET",
+        url: "{% url 'webconferences:participando'%}",
+        dataType: 'json',
+        data: {'slug':'{{name_room}}'},
+        success: function(response) {
+          console.log(response);
+        },
+        error: function(response) {
+          console.log(response);
+        }
+      });
+    }, 60*1000);
+  }
+</script>
+
+{% endblock %}
