Ajustes na web conferencia

--- a/webconference/templates/webconference/jitsi.html
+++ b/webconference/templates/webconference/jitsi.html
@@ -60,7 +60,7 @@
     var repeater = setInterval(function () {
       $.ajax({
         method: "GET",
-        url: "{% url 'webconferences:participando'%}",
+        url: "{% url 'webconferences:participating'%}",
         dataType: 'json',
         data: {'slug':'{{name_room}}'},
         success: function(response) {
