--- a/webconference/templates/webconference/update.html
+++ b/webconference/templates/webconference/update.html
@@ -10,6 +10,7 @@
 {% block javascript %}
 	{{block.super}}
 	<script type="text/javascript" src="{% static 'js/bootstrap-tagsinput.js' %} "></script>
+	<script type="text/javascript" src="{% static 'js/jquery.formset.js' %} "></script>
 {% endblock %}
 
 {% block breadcrumbs %}
