--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -514,6 +514,9 @@ a.add-row {
   color: #FFFFFF;
   background-color: #59b75c; }
 
+.chat-panel .chat-collapse {
+  background: #EEE; }
+
 @media(max-width: 768px) {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a {
     color: #333333 !important; }
