--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -686,6 +686,9 @@ a.add-row
     color: $white
     background-color: #59b75c
 
+.chat-panel .chat-collapse
+    background: #EEE
+
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
         color: #333333 !important
