--- a/chat/templates/chat/list_category.html
+++ b/chat/templates/chat/list_category.html
@@ -68,7 +68,7 @@
                                 <div class="panel panel-default">
                                     <div class="panel-body">
                                         <div class="col-md-8">
-                                            <form action="{% url 'chat:participants_general' %}" method="GET" class="form-horizontal">
+                                            <form id="search-participants" action="{% url 'chat:participants_category' category.id %}" method="GET" class="form-horizontal">
                                                 <div class="form-group">
                                                     <div class="col-md-11 col-sm-11 col-xs-11">
                                                         <input type="text" class="form-control" name="search" value="{{ search }}" placeholder="{% trans 'Search...' %}" />
