Chat conversation card style adjusts

--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -642,7 +642,10 @@ a.add-row
 .goal_divider
     border-top-color: #888
 
-.participant .user-info h4, .modal_profile_sidebar h4, .message-view .message-user
+.participant .user-info h4
+    color: #26A69A
+
+.modal_profile_sidebar h4, .message-view .message-user
     color: #59b75c
 
 .participant .user-info .status, .modal_profile_sidebar .status
