--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -12,6 +12,69 @@
 {% block sidebar %}
 {% endblock sidebar %}
 
+{% block javascript %}
+<script>
+	$(function () {
+
+		/* SCRIPT TO OPEN THE MODAL WITH THE PREVIEW */
+		$("#id_image").change(function () {
+			if (this.files && this.files[0]) {
+				var reader = new FileReader();
+				reader.onload = function (e) {
+					$("#image").attr("src", e.target.result);
+					$("#modalCrop").modal("show");
+				}
+				reader.readAsDataURL(this.files[0]);
+			}
+		});
+
+		/* SCRIPTS TO HANDLE THE CROPPER BOX */
+		var $image = $("#image");
+		var cropBoxData;
+		var canvasData;
+		$("#modalCrop").on("shown.bs.modal", function () {
+			$image.cropper({
+				viewMode: 1,
+				aspectRatio: 1/1,
+				minCropBoxWidth: 200,
+				minCropBoxHeight: 200,
+				ready: function () {
+					$image.cropper("setCanvasData", canvasData);
+					$image.cropper("setCropBoxData", cropBoxData);
+				}
+			});
+		}).on("hidden.bs.modal", function () {
+			cropBoxData = $image.cropper("getCropBoxData");
+			canvasData = $image.cropper("getCanvasData");
+			$image.cropper("destroy");
+		});
+
+		$(".js-zoom-in").click(function () {
+			$image.cropper("zoom", 0.1);
+		});
+
+		$(".js-zoom-out").click(function () {
+			$image.cropper("zoom", -0.1);
+		});
+
+		/* SCRIPT TO COLLECT THE DATA AND POST TO THE SERVER */
+		$(".js-crop-and-upload").click(function () {
+			var cropData = $image.cropper("getData");
+			$("#id_x").val(cropData["x"]);
+			$("#id_y").val(cropData["y"]);
+			$("#id_height").val(cropData["height"]);
+			$("#id_width").val(cropData["width"]);
+			$("#formUpload").submit();
+		});
+
+	});
+</script>
+
+{% endblock javascript %}
+
+
+
+
 {% block content %}
 	<div class="row">
 		<div class="col-lg-offset-1 col-md-offset-1">
@@ -40,7 +103,7 @@
 						</div>
 					</div>
 
-					<form class="{% if form.has_error %} has-error {% endif %} form-horizontal is-fileinput" method="post" enctype="multipart/form-data">
+					<form class="{% if form.has_error %} has-error {% endif %} form-horizontal is-fileinput" method="post" enctype="multipart/form-data" id="formUpload">
 						{% csrf_token %}
 						{% for field in form %}
 							<div class="col-lg-12 col-md-12 col-sm-12">
@@ -96,6 +159,34 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	<!-- MODAL TO CROP THE IMAGE -->
+	<div class="modal fade" id="modalCrop">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	        <h4 class="modal-title">Crop the photo</h4>
+	      </div>
+	      <div class="modal-body">
+	        <img src="" id="image" style="max-width: 100%;">
+	      </div>
+	      <div class="modal-footer">
+	        <div class="btn-group pull-left" role="group">
+	          <button type="button" class="btn btn-default js-zoom-in">
+	            <span class="glyphicon glyphicon-zoom-in"></span>
+	          </button>
+	          <button type="button" class="btn btn-default js-zoom-out">
+	            <span class="glyphicon glyphicon-zoom-out"></span>
+	          </button>
+	        </div>
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Nevermind</button>
+	        <button type="button" class="btn btn-primary js-crop-and-upload">Crop and upload</button>
+	      </div>
+	    </div>
+	  </div>
 	</div>
 {% endblock %}
 
