Removed outside click in crop modal

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -161,7 +161,7 @@
 		</div>
 	</div>
 	<!-- MODAL TO CROP THE IMAGE -->
-	<div class="modal fade" id="modalCrop">
+	<div class="modal fade" id="modalCrop" data-keyboard="false" data-backdrop="static">
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
