--- a/chat/templates/chat/subject_view_participants.html
+++ b/chat/templates/chat/subject_view_participants.html
@@ -9,6 +9,10 @@
     {% trans 'Messages' as bread %}
 
     {% breadcrumb bread 'chat:subject_view' subject.slug %}
+
+    {% trans 'Participants' as breadp %}
+
+    {% breadcrumb breadp 'chat:participants_subject' subject.id %}
 {% endblock %}
 
 {% block content %}
@@ -50,7 +54,7 @@
         	<div class="panel panel-default">
                 <div class="panel-body">
                     <div class="col-md-8">
-                        <form action="{% url 'chat:participants_subject' subject.id %}" method="GET" class="form-horizontal">
+                        <form action="" method="GET" class="form-horizontal">
                             <div class="form-group">
                                 <div class="col-md-11 col-sm-11 col-xs-11">
                                     <input type="text" class="form-control" name="search" value="{{ search }}" placeholder="{% trans 'Search...' %}" />
@@ -64,18 +68,18 @@
                         </form>
                     </div>
                     <div class="col-md-4">
-                        <a href="{% url 'chat:participants_subject' subject.id %}" class="pull-right btn btn-default btn-raised btn-md">{% trans 'List all participants' %}</a>
+                        <a href="" class="pull-right btn btn-default btn-raised btn-md">{% trans 'List all participants' %}</a>
                     </div>
                 </div>
             </div>
 
-            {% if conversations.count > 0 %}
+            {% if participants.count > 0 %}
                 <div class="panel category-panel-content panel-body">
-                    <h2 class="my-subjects-title"><b>{% trans 'Conversations' %}</b></h2>
+                    <h2 class="my-subjects-title"><b>{% trans 'Participants' %}</b></h2>
 
                     <div class="talks-group">
-                        {% for chat in conversations %}
-                            {% include 'chat/_view.html' with space=subject.id space_type='subject' %}
+                        {% for participant in participants %}
+                            {% include 'chat/_view_participant.html' with space=subject.id space_type='subject' %}
                         {% endfor %}
                     </div>
 
@@ -84,7 +88,7 @@
             {% else %}
                 <div class="text-center no-subjects">
                     <i class="fa fa-envelope-o"></i>
-                    <h4>{% trans 'You do not posses messages in this space yet.' %}</h4>
+                    <h4>{% trans 'There is no other participants in this space yet.' %}</h4>
                 </div>
             {% endif %}
 		</div>
