Included js code that was moved from register.html to a js file

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -31,9 +31,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/jPages.css' %}">
 
  		<script src="{% static 'js/cropper.min.js' %}"></script> <!-- Js for cropper-->
-		<link href="{% static 'css/cropper.min.css' %}" rel="stylesheet">
+		<script src="{% static 'js/crop.js' %}"></script> <!-- Js for cropper-->
+		<link href="{% static 'css/cropper.min.css' %}" rel="stylesheet"> <!-- CSS for cropper-->
 
-		
+
 	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
 	<!--<script type="text/javascript" src="{% static 'js/bootstrap-acessibility2.min.js' %}"></script>-->
 	<script type="text/javascript" src="{% static 'material/js/material.min.js' %}"></script>
