Changed 'crop' to 'save image' in the button

--- a/users/templates/users/modal_crop.html
+++ b/users/templates/users/modal_crop.html
@@ -22,7 +22,7 @@
           </button>
         </div>
         <button type="button" class="btn btn-raised btn-default" data-dismiss="modal" id = "crop_cancel">{% trans 'Cancel' %}</button>
-        <button type="button" class="btn btn-success btn-raised post-button js-crop-and-upload">{% trans 'Crop' %} </button>
+        <button type="button" class="btn btn-success btn-raised post-button js-crop-and-upload">{% trans 'Save Image' %} </button>
       </div>
     </div>
   </div>
