--- a/users/templates/users/modal_crop.html
+++ b/users/templates/users/modal_crop.html
@@ -7,7 +7,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h4 class="modal-title">Crop the photo</h4>
+        <h4 class="modal-title">{% trans 'Image selection' %}</h4>
       </div>
       <div class="modal-body">
         <img src="" id="image" style="max-width: 100%;">
