--- a/users/templates/users/_form.html
+++ b/users/templates/users/_form.html
@@ -13,7 +13,7 @@
 				{% endif %}
 				{% render_field field class='form-control' %}
 				<div class="input-group">
-                  	<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
+                  	<input type="text" readonly="" class="form-control" id="pic_holder" placeholder="{% trans 'Choose your photo...' %}">
                   	<span class="input-group-btn input-group-sm">
                     	<button type="button" class="btn btn-fab btn-fab-mini">
                     		<i class="material-icons">image</i>
@@ -68,3 +68,4 @@
 	</div>
 
 </form>
+{% include 'users/modal_crop.html'  %}
