--- a/students_group/templates/groups/delete.html
+++ b/students_group/templates/groups/delete.html
@@ -1,23 +1,24 @@
-{% load i18n %}
+{% load static i18n permission_tags %}
 
+<!-- Modal (remember to change the ids!!!) -->
 <div class="modal fade" id="topic" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-body">
-                <form id="delete_form" action="{% url 'groups:delete' group.slug %}" method="post">
-                    {% csrf_token %}
-                    <h3>{% trans 'Are you sure you want delete the group' %}: {{ group }}?</h3>
-                    <p>{% trans 'With this action the group will no longer exist but your participants will still be attached to the subject.' %}</p>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <div class="pull-right">
-                    <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
-                </div>
-                <div class="pull-left">
-                    <button type="submit" form="delete_form" class="btn btn-success btn-raised">{% trans "Delete" %}</button>
-                </div>
-            </div>
-        </div>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+           <!-- Modal Body -->
+      <div class="modal-body">
+        <!-- Put ONLY your content here!!!  -->
+        <form id="delete_form" action="{% url 'groups:delete' group.slug %}" method="post">
+          {% csrf_token %}
+          <h3>{% trans 'Are you sure you want delete the group' %}: {{ group }}?</h3>
+          <p>{% trans 'With this action the group will no longer exist but your participants will still be attached to the subject.' %}</p>
+        </form>
+      </div>
+      <!-- Modal Footer -->
+      <div id="delete-category-footer"class="modal-footer">
+        <!-- Don't remove that!!!  -->
+        <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
+        <button type="submit" id="button" form="delete_form" class="btn btn-success btn-raised erase-button">{% trans "Delete" %}</button>
+      </div>
     </div>
+  </div>
 </div>
